// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Molecule Task Component Correct checked layout 1`] = `
<div>
  <div
    class="todo"
  >
    <label>
      <input
        class="checkbox"
        type="checkbox"
      />
       
      <span
        class="fake"
      />
    </label>
     
    <span
      class="task done"
    >
      Test Title
    </span>
     
    <button
      class="delete"
    >
      ×
    </button>
  </div>
</div>
`;

exports[`Molecule Task Component Correct unchecked layout 1`] = `
<div>
  <div
    class="todo"
  >
    <label>
      <input
        class="checkbox"
        type="checkbox"
      />
       
      <span
        class="fake"
      />
    </label>
     
    <span
      class="task"
    >
      Test Title
    </span>
     
    <button
      class="delete"
    >
      ×
    </button>
  </div>
</div>
`;
